--- a/docs/post/network/网络相关.md
+++ b/docs/post/network/网络相关.md
@@ -9,23 +9,18 @@ categories:
 
 ## 请求头相关
 
-post请求如果是通过页面表单方式提交，那就是
-
-`
-"application/x-www-form-urlencoded"
-`
-
-如果是json（要反序列化成字符串），那就是
-
-`"application/json"`
-
-对于`"application/x-www-form-urlencoded"`，其参数组织形式，是键值对，类似于get方式的参数形式：
+- post请求如果是通过页面表单方式提交(不包含file)，那就是`"application/x-www-form-urlencoded"
+  `，其参数组织形式，是键值对，类似于get方式的参数形式：
 
 ```
 name=张三&sex=男&tel=5354169
 ```
 
-而json大家都知道，是这样的：
+- 如果包含file，那就用`multipart/form-data`,浏览器会把整个表单以控件为单位分割，并为每个部分加上Content-Disposition(form-data或者file),Content-Type(默认为text/plain),name(控件name)等信息，并加上分割符
+
+- 如果是json（要反序列化成字符串），那就是
+
+`"application/json"`，而json大家都知道，是这样的：
 
 ```
 {
@@ -34,8 +29,6 @@ name=张三&sex=男&tel=5354169
     tel:"5354169",
 }
 ```
-
-<!-- more -->
 
 ## 各种连接的概念与比较
 
