feat: 新增雪花飘落插件

--- a/docs/post/other/问题汇总.md
+++ b/docs/post/other/问题汇总.md
@@ -1,5 +1,5 @@
 ---
-title: js设计模式
+title: 成长足迹
 date: 2020-07-22
 tags:
  - 温故知新
@@ -11,7 +11,7 @@ categories:
 
 
 
-## 问题汇总，自问自答
+## 成长足迹
 
 - [ ] hooks是如何实现的？为什么一定要放在最外层？执行顺序对hooks内部有何影响？
 
