feat: 更新博客内容

--- a/docs/post/network/网络相关.md
+++ b/docs/post/network/网络相关.md
@@ -477,3 +477,28 @@ localHandler({
 网络层： 常见的协议有 IP 协议，ICMP 协议，IGMP 协议
 
 网络接口层： 常见的协议有 ARP 协议，RARP 协议
+
+
+
+## 杂项
+
+- connect 设置为keep-alive 与 content-length 的关系？
+
+https://segmentfault.com/a/1190000008359278
+
+
+
+## 遇到的实际问题记录
+
+1. 使用srcipt标签出现跨域
+
+使用下面这个写法会出现跨域问题
+
+```html
+<script crossorigin='anonymous' src='https://stackoverflow.com/foo.js'></script>
+```
+
+简单介绍一下，在HTML5中，一些 HTML 元素提供了对 CORS 的支持， 例如 <audio>、<img>、<link>、<script> 和 <video> 均有一个跨域属性 (crossOrigin property)，它允许你配置元素获取数据的 CORS 请求
+
+原因： crossorigin有三种类型，分别是`anonymous`, `use-credentials`和缺省值。当crossorigin 是缺省值的时候，浏览器不会进行跨域检查，但如果请求的文件逻辑出错的时候，不会显示报错信息。如果需要显示报错信息，就需要使用crossorigin字段，在非同源情况下，设置 "anonymous" 关键字将不会通过 cookies，客户端 SSL 证书或 HTTP 认证交换用户凭据。但无论如何，存在crossorigin时，响应头里应该要含有`Access-Control-Allow-Origin`字段。
+
