--- a/docs/post/network/网络相关.md
+++ b/docs/post/network/网络相关.md
@@ -277,6 +277,16 @@ Content-Type: text/html; charset=utf-8
 
 浏览器先询问服务器，当前网页所在的域名是否在服务器的许可名单之中，以及可以使用哪些HTTP动词和头信息字段。只有得到肯定答复，浏览器才会发出正式的`XMLHttpRequest`请求，否则就报错。
 
+服务端可以设置返回头允许跨域，如：
+```js
+response.writeHeader(200,{
+	"Access-Control-Allow-Origin":"https://baidu.com", // 允许跨域的域名，
+	"Access-Control-Allow-Headers":"X-Session-Key", // 允许自定义的 headers，
+	"Access-Control-Allow-Methods":"PUT,POST,DELETE", // 允许请求的方法，
+	"Access-Control-Max-Age":"1000", // 1000秒内不再发送"预检"请求，
+})
+```
+
 ##### cookie跨域
 
 CORS请求默认不发送Cookie和HTTP认证信息。如果要把Cookie发到服务器，一方面要服务器同意，指定`Access-Control-Allow-Credentials`字段。
@@ -345,12 +355,12 @@ xhr.withCredentials = true;
 ### 数字证书
 
 - 明文信息 : 公钥 , 域名, 证书签名算法, 过期时间等其他信息
-- 数字签名: 用证书签名算法将明文信息转成摘要(二进制数), 再用ca机构的私钥加密摘要得到的结果
+- 数字签名: 用证书签名算法将明文信息转成摘要(二进制数), 再用证书颁发机构(CA)的私钥加密摘要得到的结果
 
 #### 验证过程
 
 1. 浏览器收到证书
-2. 用浏览器内置的ca机构公钥解密数字签名,得到结果a
+2. 用浏览器内置的证书颁发机构(CA)公钥解密数字签名,得到结果a
 3. 用证书里的证书签名算法将明文信息转成摘要,得到结果b
 4. 将a和b对比,若一样则可信
 
@@ -498,7 +508,8 @@ https://segmentfault.com/a/1190000008359278
 <script crossorigin='anonymous' src='https://stackoverflow.com/foo.js'></script>
 ```
 
-简单介绍一下，在HTML5中，一些 HTML 元素提供了对 CORS 的支持， 例如 <audio>、<img>、<link>、<script> 和 <video> 均有一个跨域属性 (crossOrigin property)，它允许你配置元素获取数据的 CORS 请求
+简单介绍一下，在HTML5中，一些 HTML 元素提供了对 CORS 的支持， 例如 `<audio>`、`<img>`、`<link>`、`<script>` 和 `<video>` 均有一个跨域属性 (crossOrigin property)，它允许你配置元素获取数据的 CORS 请求
 
 原因： crossorigin有三种类型，分别是`anonymous`, `use-credentials`和缺省值。当crossorigin 是缺省值的时候，浏览器不会进行跨域检查，但如果请求的文件逻辑出错的时候，不会显示报错信息。如果需要显示报错信息，就需要使用crossorigin字段，在非同源情况下，设置 "anonymous" 关键字将不会通过 cookies，客户端 SSL 证书或 HTTP 认证交换用户凭据。但无论如何，存在crossorigin时，响应头里应该要含有`Access-Control-Allow-Origin`字段。
+
 
